--- a/index.html
+++ b/index.html
@@ -125,87 +125,5 @@
 				</div>
 			</div>
 		</div>
-		<div class="grid-area">
-			<div class="grid-wrapper">
-				<div class="grid-slideout grid-top">
-					<div class="grid-slideout-sidebar">
-						<div class="grid-slideout-sidebar-tab"></div>
-						<h3>Join the circle of fun</h3>
-						<p>Nonumes vituperatoribus at cum, veniam quaeque adolescens duo et, ex persequeris consectetuer mea. Consequat necessitatibus sea id, vis no wisi omnesque. Harum accusata deseruisse...</p>
-						<h4>More > </h4>
-						<div class="grid-slideout-sidebar-pointer"></div>
-					</div>
-				</div>
-				<div class="grid-row">
-					<div class="grid-box-half grid-box">
-						<img src="images/Grid-Images/image1.png" />
-						<div class="grid-cover-tall-red grid-cover grid-top-row">
-							<h2>Circle of Fun</h2>
-							<div class="dotted-shadow">
-								<ul>
-									<li>Socialize /</li>
-									<li>Party /</li>
-									<li>Meet other bonfun fans /</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="grid-box-sixth">
-						<img src="images/Grid-Images/image2.png" />
-						<div class="grid-cover-short-orange grid-cover-vert">
-							<h2>Infusions</h2>
-						</div>
-					</div>
-					<div class="grid-box-twosixth">
-						<img src="images/Grid-Images/image3.png" />
-						<div class="grid-cover-wide-red grid-cover-vert">
-							<h2>Store Locator</h2>
-						</div>
-					</div>
-				</div>
-				<div class="grid-slideout grid-middle"></div>
-				<div class="grid-row">
-					<div class="grid-box-twosixth">
-						<img src="images/Grid-Images/image4.png" />
-						<div class="grid-cover-wide-orange grid-cover-vert">
-							<h2>Cognac Grapes</h2>
-						</div>
-					</div>
-					<div class="grid-box-sixth">
-						<img src="images/Grid-Images/image5.png" />
-						<div class="grid-cover-short-red grid-cover-vert">
-							<h2>Cognac, France</h2>
-						</div>
-					</div>
-					<div class="grid-box-half">
-						<img src="images/Grid-Images/image6.png" />
-						<div class="grid-cover-tall-orange right grid-cover">
-							<h2>Fun Music</h2>
-						</div>
-					</div>
-				</div>
-				<div class="grid-slideout grid-bottom"></div>
-				<div class="grid-row">
-					<div class="grid-box-half">
-						<img src="images/Grid-Images/image9.png" />
-						<div class="grid-cover-tall-red grid-cover">
-							<h2>How to Party</h2>
-						</div>
-
-					</div>
-					<div class="grid-box-twosixth">
-						<img src="images/Grid-Images/image8.png" />
-						<div class="grid-cover-wide-orange grid-cover-vert">
-							<h2>Special Events</h2>
-						</div>
-					</div>
-					<div class="grid-box-sixth">
-						<img src="images/Grid-Images/image7.png" />
-						<div class="grid-cover-short-red grid-cover-vert">
-							<h2>Brand Ambassadors</h2>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		<?php get_template_part('grid','area'); ?>
 		<?php get_footer(); ?>
