--- a/aboutus.html
+++ b/aboutus.html
@@ -3,10 +3,10 @@
 <head>
 	<title>about</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="<?php echo get_template_directory_uri(); ?>/style.css">
 	<link type="text/css" rel="stylesheet" href="http://fast.fonts.net/cssapi/59138cf6-6f30-458d-ba53-73aa9b77f73d.css"/>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-	<script type="text/javascript" src="js/Jcarousel.js"></script>
+	<script type="text/javascript" src="<?php echo get_template_directory_uri(); ?>/js/Jcarousel.js"></script>
 </head>
 <body>
 	<div class="about-header">
@@ -15,7 +15,7 @@
 	<div class="about-container">
 		<div class="aged-section">
 			<h2>aged for <span>flavor</span></h2>
-			<img src="images/about-divider.png" alt="" />
+			<img src="<?php echo get_template_directory_uri(); ?>/images/about-divider.png" alt="" />
 			<p>Lorem ipsum dolor sit amet, fabulas deleniti an his, graeco luptatum constituam at mei, mei no scripta iracundia. Et mea facilis commune, tempor legimus ullamcorper nec id. Usu amet iusto erroribus ex, eirmod facilis menandri id mel, in elit nostrud his. Et probo maiorum fastidii est, no sed dicat homero soleat. Ei aliquam eligendi sit. Cu diam vivendo his, omnis interpretaris at pri, noluisse complectitur in his.
 			</p>
 			<p>Ut legendos volutpat recteque cum, modo disputando et sit. Eos et primis euismod. Ea maiorum ludaturque mea. Ea solum soluta habemus pro. Ei ius commodo alterum molestiae, et hinc abhorreant pri.
@@ -42,16 +42,5 @@
 			</div>
 		</div>
 	</div>
-
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
